# Cell

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  format-and-tidy.ps1  meson.build  meson_options.txt
Core/: CMakeLists.txt  Cargo.toml  build.rs  meson.build
Core/BuildContent/Sources/: CellLogoWindows.pdn
Core/BuildContent/Windows/: Manifest.manifest  Manifest.rc.in
Core/BuildContent/macOS/: Cell.icns  Info.plist
Core/Content/: NOTICE
Core/GeneratedIncludes/: CellVersion.h.in
Core/GeneratedIncludes/Cell/: Version.h.in
Core/Includes/Cell/: Cell.hh  Optional.hh  Reference.hh  Scoped.hh  String.hh  Wrapped.hh
Core/Includes/Cell/Collection/: Array.hh  Dictionary.hh  Enumerable.hh  List.hh  Single.hh
Core/Includes/Cell/IO/: Directory.hh  File.hh  FolderWalker.hh  HID.hh  Pipe.hh  Result.hh  USB.hh
Core/Includes/Cell/Memory/: Allocator.hh  Block.hh  OwnedBlock.hh  UnownedBlock.hh
Core/Includes/Cell/Network/: AddressInfo.hh  Properties.hh  Result.hh  Socket.hh
Core/Includes/Cell/StringDetails/: Formatting.hh  RawString.hh  Result.hh
Core/Includes/Cell/System/: Block.hh  BlockImpl.hh  Channel.hh  DynamicLibrary.hh  Entry.hh  Event.hh  Log.hh  Memory.hh  Mutex.hh  Panic.hh  RNG.hh  Result.hh  String.hh  StringFormatting.hh  Thread.hh  Timer.hh
Core/Includes/Cell/Utilities/: Byteswap.hh  Concepts.hh  MinMaxClamp.hh  Preprocessor.hh  RawString.hh  Reader.hh
Core/Platform/Linux/: Bootstrap.cc  CMakeLists.txt  String.cc
Core/Platform/Linux/Network/: TypeConversion.cc
Core/Platform/Linux/Sources/: Bootstrap.cc  VirtualStub.cc
Core/Platform/Linux/System/: DynamicLibrary.cc  Log.cc  Mutex.cc
Core/Platform/Windows/: Bootstrap.cc  CMakeLists.txt  String.cc
Core/Platform/Windows/BuildContent/: Manifest.manifest.in
Core/Platform/Windows/Manifests/: Manifest.manifest.in  Manifest.rc.in
Core/Platform/Windows/Network/: AddressInfo.cc  Internal.hh
Core/Platform/Windows/Sources/: Bootstrap.cc  String.cc
Core/Platform/Windows/System/: Event.cc  Log.cc  RNG.cc  Thread.cc  Timer.cc
Core/Platform/macOS/: Bootstrap.mm  CMakeLists.txt
Core/Platform/macOS/BuildContent/: Info.plist.in
Core/Platform/macOS/Sources/: Bootstrap.mm  String.mm
Core/Platform/macOS/System/: Mutex.mm  Panic.mm  Thread.mm
Core/Sources/: Cell.cc  interop.rs  io.rs  lib.rs  logging.rs  mod.rs  platform.rs
Core/Sources/String/: Actions.cc  Checks.cc  Constructors.cc  Conversions.cc  Format.cc  Operators.cc
Core/Sources/System/: Panic.cc  String.cc  StringFormat.cc
Core/Tests/: CMakeLists.txt  Enumerables.cc  Movement.cc  Network.cc  String.cc  System.cc  Utilities.cc  WindowsDirectoryInspection.cc
Core/Tests/Sources/: System.cc  Utilities.cc
Editor/: CMakeLists.txt  meson.build
Editor/Sources/: Editor.cc  Editor.hh
Engine/: CMakeLists.txt
Engine/BuildContent/Sources/: CellLogo.pdn  LoadingAnimation.pdn
Engine/BuildScripts/: ContentPacking.cmake  Modules.cmake  Shaders.cmake  Shared.cmake
Engine/BuildScripts/Dependencies/: FindOpenXR.cmake  FindPulseAudio.cmake  FindVulkan.cmake  Findglslc.cmake  Findwayland.cmake  Findxkbcommon.cmake
Engine/Content/: NOTICE
Engine/Core/: CMakeLists.txt
Engine/Core/Sources/: Cell.cc
Engine/Core/Tests/: CMakeLists.txt
Engine/Modules/Audio/: CMakeLists.txt
Engine/Modules/D3D12/: CMakeLists.txt
Engine/Modules/DataManagement/: CMakeLists.txt
Engine/Modules/Mathematics/: CMakeLists.txt  README.md
Engine/Modules/OpenXR/: CMakeLists.txt  ExtensionList.md  README.md
Engine/Modules/Shell/: CMakeLists.txt
Engine/Modules/Vulkan/: CMakeLists.txt
Engine/Utilities/ContentPacker/: CMakeLists.txt
Modules/Audio/: CMakeLists.txt  meson.build
Modules/Audio/Sources/: CreateEngine.cc  CreateSubsystem.cc
Modules/D3D12/: CMakeLists.txt
Modules/D3D12/BuildScripts/: D3D12Shader.cmake
Modules/D3D12/Sources/: CommandList.cc  Device.cc  Pipeline.cc  Resource.cc  Swapchain.cc
Modules/DataManagement/: CMakeLists.txt  README.md  meson.build
Modules/DataManagement/BuildScripts/: ContentPacking.cmake
Modules/DataManagement/Content/: Data.json
Modules/DataManagement/RustImplementation/: Cargo.toml  cbindgen.toml
Modules/DataManagement/Sources/: Archive.cc  Base64.cc  Checksum.cc  JSON.cc  RustTest.cc  zlib.cc
Modules/DataManagement/Tests/: HTTP.cc  JSON.cc  PNG.cc  Rust.cc  glTF.cc
Modules/JavaScript/: CMakeLists.txt  README.md
Modules/JavaScript/Sources/: Engine.cc
Modules/JavaScript/Tests/: Generic.cc
Modules/Mathematics/: CMakeLists.txt  meson.build
Modules/Mathematics/Sources/: Checks.cc
Modules/Mathematics/Tests/: Vector.cc
Modules/Metal/: CMakeLists.txt
Modules/Metal/Sources/: Device.mm
Modules/Metal/Utilities/: Runner.cc
Modules/OpenXR/: CMakeLists.txt  meson.build
Modules/OpenXR/Sources/: CreateRenderTargetsVulkan.cc  CreateSessionD3D12.cc  CreateSessionVulkan.cc  CreateSpace.cc  FetchViewConfiguration.cc  FrameControl.cc  GetFunctionPointer.cc  InitializeSessionVulkan.cc  InitializeSystem.cc  Instance.cc  New.cc  PrepSession.cc  Session.cc  UpdateState.cc
Modules/Renderer/: CMakeLists.txt  meson.build
Modules/Renderer/Sources/: Stub.cc
Modules/Shell/: CMakeLists.txt  Cargo.toml  README.md  build.rs  meson.build
Modules/Shell/Sources/: Actions.cc  Controller.cc  RunDispatch.cc  Shell.cc  keyboard.rs  mod.rs
Modules/Vulkan/: CMakeLists.txt  Cargo.toml  build.rs
Modules/Vulkan/BuildScripts/: VulkanShader.cmake
Modules/Vulkan/Sources/: device.rs  image.rs  instance.rs  lib.rs  render_target.rs  wsi_target.rs
Project/: CMakeLists.txt  Cargo.toml  build.rs
Project/Content/Shaders/: Default.spv  Default2Fragment.spv  Default2Vertex.spv  DefaultFragment.spv  DefaultVertex.spv
Project/Sources/: AudioThread.cc  Example.cc  Example.hh  InputController.hh  InputThread.cc  NetworkThread.cc  ShellSetup.cc  main.rs
Project/Sources/Renderer/: Thread.cc  Tools.hh
Project/Sources/Vulkan/: Thread.cc  Tools.hh
Project/Sources/XR/: Thread.cc  Tools.hh  ToolsPrepare.cc
title/: Cargo.toml
title/src/: main.rs
(+926 files in other folders)
