# SPDX-FileCopyrightText: Copyright 2023-2024 Gloria G.
# SPDX-License-Identifier: BSD-2-Clause

editor_soures = [
    'Sources/Editor.cc'
]

executable('CellEditor',
    sources: editor_soures,
    dependencies: [ core, core_bootstrapper, module_datamanagement, module_shell ],

    win_subsystem: 'windows'
)
