# SPDX-FileCopyrightText: Copyright 2023 Gloria G.
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "cell_example"
description = "Cell"
version = "1.0.0"
edition = "2021"
authors = ["Gloria G."]

[[bin]]
name = "cell_example"
path = "Sources/main.rs"

[dependencies]
cell_core = { path = "../Core" }
cell_module_shell = { path = "../Modules/Shell" }
cell_module_vulkan = { path = "../Modules/Vulkan" }

[build-dependencies]
cell_buildtools = { path = "../BuildTools" }
