# SPDX-FileCopyrightText: Copyright 2023 Gloria G.
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "cell_title"
version = "1.0.0"
edition = "2021"
authors = ["Gloria G"]

[dependencies]
cell_core = { path = "../engine/core" }
cell_modules_shell = { path = "../engine/modules/shell" }
cell_modules_vulkan = { path = "../engine/modules/vulkan" }
